melpazoid config: ignore Warning argument _

--- a/.github/workflows/melpazoid.yml
+++ b/.github/workflows/melpazoid.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           echo $GITHUB_REF
           if make -C ~/melpazoid |& tee output.log; then
-            if grep -q "Warning" output.log; then
+            if grep -v 'Warning: argument `_' output.log | grep -q "Warning"; then
               echo "Warnings detected, failing workflow"
               exit 1
             fi
