--- a/.github/workflows/melpazoid.yml
+++ b/.github/workflows/melpazoid.yml
@@ -34,8 +34,16 @@ jobs:
         run: |
           echo $GITHUB_REF
           if make -C ~/melpazoid |& tee output.log; then
-            if grep -v 'Warning: argument `_' output.log | grep -q "Warning"; then
+            # if grep -v 'Warning: argument `_' output.log | grep -q "Warning"; then
+            #   echo "Warnings detected, failing workflow"
+            #   exit 1
+            # fi
+            if grep -q "Warning" output.log ; then
               echo "Warnings detected, failing workflow"
+              exit 1
+            fi
+            if grep -q ': error: ' output.log ; then
+              echo "Error detected, failing workflow"
               exit 1
             fi
           else
